assets/css/main.css
/* General */

body {
	font-family: 'Karla', sans-serif;
	font-size: 87.5%;
	line-height: 1.5;
	padding: 0 0 10%;
	background: white;
	color: #333;
}

#main, #main-nav, #secondary {
	margin: 0 5%;
}

a {
	color: black;
}
a:hover, a:focus, a:active {
	outline: none;
	color: #900;
}

.current a {
  font-weight: bold;
  text-decoration: none;
}

h1 {
	font-weight: 800;
	border-bottom: 1px solid rgba(0,0,0,.1);
}
h1 small {
	float: right;
	margin-top: .2em;
	font-weight: bold;
}
h2 {
	margin-top: 1.5em;
}
h3 {
	margin-top: 1.5em;
}
h4 {
	margin-top: 2em;
	font-weight: 800;
	color: #888;
	text-transform: uppercase;
	letter-spacing: .1em;
}

p {
  margin: 1.7em 0;
}

ul {
	list-style: square;
}

li {
  margin: .75em 0;
}
li p {
  margin: .75em 0;
}

small {
	color: #AAA;
	white-space: nowrap;
	font-weight: normal;
}
small a {
  color: #888;
}

#page-header {
  text-align: center;
  background: rgba(0,0,0,.7);
  color: white;
  padding: 2em 5% 1em;
  box-shadow: inset 0 -5px 5px -5px rgba(0,0,0,.25);
  overflow: hidden;
}
#page-header a {
  color: inherit;
  text-decoration: none;
  display: block;
}
#page-header h1 {
  border: none;
  margin: 0;
}
#page-header h4 {
  margin: 0;
}

#page-header .info {
}
#page-header nav {
  float: right;
  clear: left;
  margin-top: -2em;
}
#page-header nav li {
  float: left;
}
#page-header nav li a {
  display: block;
  margin-left: .5em;
  background: rgba(255,255,255,.1);
  padding: .5em 1em;
  border-radius: 5px 5px 0 0;
}
#page-header nav li.current a {
  background: white;
  color: black;
  font-weight: normal;
}

#main {
}

footer {
	clear: both;
}

pre, code {
	font-family: monospace;
}

pre {
	
}

code {
	border: 1px solid rgba(0,0,0,.0625);
	background: rgba(0,0,0,.0125);
	border-radius: 5px;
	padding: 1px 5px;
	font-size: 1.1em;
}

pre code {
	border: none;
	background: none;
	padding: 0;
	font-size: 1em;
}

.highlight {
	border: 1px solid rgba(0,0,0,.125);
	background: rgba(0,0,0,.025);
	padding: 0 1em;
	border-radius: 5px;
	margin: 1em 0;
}

nav ul {
	list-style: none;
	margin: 0;
	padding: 0;
}
nav ul li {
	margin: 0;
	padding: 0;
}

article {
  max-width: 45em;
}

#nav {
  border-top: 2px solid rgba(0,0,0,.1);
}
#nav li {
  margin: .25em 0;
}

table.calendar {
  width: 100%;
}
.calendar th {
  text-align: right;
  padding: 1em;
}
.calendar td.past { opacity: 0.5; }
.calendar td.today .date { font-weight: bold; }
.calendar .date { overflow: hidden; }

.calendar .october { background: #eee; }
.calendar .november { background: #ddd; }

.calendar .today { background: #FFFDC7; }

.calendar .month { float: left; }
.calendar .day { float: right; }
.calendar tr {
  border-left: 1px solid white;
}
.calendar td {
  height: 12em;
  vertical-align: top;
  width: 20%;
  padding: 1em;
  border-right: 1px solid white;
  border-bottom: 1px solid white;
}
.calendar a {
  display: block;
  background: rgba(0,0,0,.1);
  margin: .25em -1em;
  padding: .25em 1em;
  text-decoration: none;
}
.calendar a:hover {
}

/* Bigger Screens */

@media screen and (min-width: 30em) {
	body {
	  font-size: 100%;
	}
	.calendar {
	  font-size: .75em;
	}
}
@media screen and (min-width: 55em) {
  #page-header {
    text-align: left;
  }
  article {
    float: left;
    width: 65%;
  }
  #nav {
    float: right;
    width: 30%;
    font-size: .875em;
    padding-left: 2%;
    padding-bottom: 1.7em;
    position: relative;
    margin-top: 1.5em;
    border: none;
  }
  #nav:before {
    display: block;
    content: ' ';
    width: 1px;
    height: 100%;
    position: absolute;
    top: 0;
    left: 0;
    background: linear-gradient(
      rgba(0,0,0,0),
      rgba(0,0,0,.1) 10%,
      rgba(0,0,0,.1) 90%,
      rgba(0,0,0,0)
    );
  }
}

